feat: readd java launching capability for legacy clients